# dalle2-in-python

./: .gitignore  CONTRIBUTING.md  README.md  index.md  setup.cfg
.github/workflows/: greetings.yml
src/dalle2/: __init__.py  dalle2.py
