[metadata]
name = dalle2
version = 1.0.6
author = ezzcodeezzlife
author_email = author@example.com
description = Use DALL·E 2 in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ezzcodeezzlife/dalle2-in-python
project_urls =
    Bug Tracker = https://github.com/ezzcodeezzlife/dalle2-in-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
